updated view-more links on several project landing pages, fixed some home page alignment issues

--- a/web/themes/custom/thinkwork8_boot/css/style.css
+++ b/web/themes/custom/thinkwork8_boot/css/style.css
@@ -169,6 +169,11 @@ h1,h2,h3,h4,h5,h6 {
 .card-header h2, .card-header h3 {color:#fff;}
 .card-block{    flex: 1 1 auto;
     padding: 1.25rem;}
+
+.view-display-id-block_2 {
+padding: 5px 10px;
+}
+
 .dropdown-item {
 	border-bottom:#ddd 1px solid;
 }
@@ -555,5 +560,39 @@ ul.sf-menu.sf-style-none li.sf-multicolumn-wrapper ol li {
 ul.sf-menu.sf-style-none li.sf-multicolumn-wrapper a.menuparent,
 ul.sf-menu.sf-style-none li.sf-multicolumn-wrapper span.nolink.menuparent {
   font-weight: bold;
+}
+
+
+
+/* View More links on some project landing pages */
+
+.view-aie-taxonomy-term .more-link {
+    font-weight: 700;
+    border-radius: 4px;
+    border: solid 2px #468cc8;
+    display: inline-block;
+    padding: 5px;
+    float: right;
+}
+
+
+
+.view-elc-taxonomy-term .more-link {
+    font-weight: 700;
+    border-radius: 4px;
+    border: solid 2px #468cc8;
+    display: inline-block;
+    padding: 5px;
+    float: right;
+}
+
+
+.view-rrtc-taxonomy-term .more-link {
+    font-weight: 700;
+    border-radius: 4px;
+    border: solid 2px #468cc8;
+    display: inline-block;
+    padding: 5px;
+    float: right;
 }
 
